--- a/styles/components/_counters.css
+++ b/styles/components/_counters.css
@@ -1,5 +1,5 @@
 .counter {
-  @apply inline-grid h-full p-2 border rounded-full bg-pageBG text-pageText;
+  @apply inline-grid h-full p-8 border rounded-full bg-pageBG text-pageText;
   grid-template-columns: auto auto auto;
 
   &.is-inverted {
@@ -7,12 +7,12 @@
   }
 
   &.is-small {
-    @apply p-1;
+    @apply p-4;
   }
 
   &--down,
   &--up {
-    @apply self-center w-8 h-8 -my-px p-2 bg-transparent rounded-full transition-colors duration-300;
+    @apply self-center w-32 h-32 -my-1 p-8 bg-transparent rounded-full transition-colors duration-300;
 
     .cart & {
       @apply my-0;
@@ -37,10 +37,10 @@
   }
   
   &--amount {
-    @apply relative overflow-hidden w-12 text-xs font-mono;
+    @apply relative overflow-hidden w-48 text-12 font-mono;
 
     .cart & {
-      @apply w-8;
+      @apply w-32;
     }
 
     &:focus-within {
@@ -66,7 +66,7 @@
     }
     
     input {
-      @apply relative bg-transparent border-0 rounded-none appearance-none p-1 w-full h-full text-center text-current text-base outline-none;
+      @apply relative bg-transparent border-0 rounded-none appearance-none p-4 w-full h-full text-center text-current text-16 outline-none;
       font-feature-settings: "tnum";
     }
   }
