--- a/styles/_config/_mixins.css
+++ b/styles/_config/_mixins.css
@@ -5,12 +5,6 @@
     @apply appearance-none no-underline cursor-pointer font-inherit;
   }
 
-  .sr-only {
-    @apply absolute m-0 p-0 border-0 w-px h-px overflow-hidden whitespace-nowrap;
-    clip: rect(1px, 1px, 1px, 1px);
-    clip-path: inset(50%);
-  }
-
   .hide-scrollbar {
     -ms-overflow-style:none;
     scrollbar-width:none;
@@ -35,7 +29,7 @@
 
   .has-indicator {
     &::before {
-      @apply inline-block mr-2 rounded-full border w-[10px] h-[10px];
+      @apply inline-block mr-8 rounded-full border w-10 h-10;
       content: "";
     }
 
