--- a/styles/base/_chips.css
+++ b/styles/base/_chips.css
@@ -3,23 +3,23 @@
   mask-image: linear-gradient(90deg,transparent 0, #000 1rem, #000 calc(100% - 1rem), transparent);
 
   &--list {
-    @apply p-4 whitespace-nowrap;
+    @apply p-16 whitespace-nowrap;
   }
 
   .chip {
-    @apply mr-2;
+    @apply mr-8;
   }
 }
 
 .chip {
-  @apply clean-btn inline-flex items-center justify-center align-middle bg-pageBG text-pageText rounded-full p-2 font-semibold;
+  @apply clean-btn inline-flex items-center justify-center align-middle bg-pageBG text-pageText rounded-full p-8 text-14 leading-100 font-semibold;
 
   &--label {
-    @apply px-2 max-w-[10rem] overflow-hidden overflow-ellipsis;
+    @apply px-8 py-1 max-w-[10rem] overflow-hidden overflow-ellipsis;
   }
 
   &--icon {
-    @apply w-6 h-6 p-1 -my-2 -mx-1 rounded-full transition-colors duration-300;
+    @apply w-24 h-24 p-4 -my-8 -mx-4 rounded-full transition-colors duration-300;
 
     .chip:hover & {
       background: hsla(var(--pageText-hsl), .2);
