--- a/styles/components/_cookie-bar.css
+++ b/styles/components/_cookie-bar.css
@@ -1,15 +1,15 @@
 .cookie-bar {
-  @apply fixed bottom-0 right-0 z-90 p-4 w-full max-w-3xl;
+  @apply fixed bottom-0 right-0 z-9 p-16 w-full max-w-3xl;
 
   &--content {
-    @apply grid gap-6 sm:flex items-center p-6 pb-4 sm:p-6 rounded-lg bg-pageText text-pageBG border;
+    @apply grid gap-24 sm:flex items-center p-24 pb-16 sm:p-24 rounded-xl bg-pageText text-pageBG border;
   }
 
   &--message {
-    @apply flex-1 sm:pr-8 text-center sm:text-left;
+    @apply flex-1 sm:pr-32 text-center sm:text-left;
 
     p {
-      @apply text-sm leading-normal;
+      @apply text-14 leading-150;
 
       br {
         @apply hidden sm:block;
@@ -18,7 +18,7 @@
   }
 
   &--actions {
-    @apply grid sm:grid-cols-2 gap-1 flex-shrink-0;
+    @apply grid sm:grid-cols-2 sm:items-center gap-8 flex-shrink-0;
 
     button {
       @apply order-first sm:order-none;
