--- a/styles/components/_promo-banner.css
+++ b/styles/components/_promo-banner.css
@@ -1,9 +1,9 @@
 .promo-bar {
-  @apply relative z-60 bg-pageText text-pageBG text-center whitespace-nowrap overflow-x-auto overflow-y-hidden;
+  @apply relative z-6 bg-pageText text-pageBG text-center whitespace-nowrap overflow-x-auto overflow-y-hidden;
   scroll-behavior: smooth;
 
   &--content {
-    @apply flex justify-center px-8 py-2 text-sm font-semibold;
+    @apply flex justify-center px-30 py-11 text-14 leading-100 font-semibold;
   }
 
   &--link {
